Correct spelling mistakes

--- a/semester 2/physics 1.tex
+++ b/semester 2/physics 1.tex
@@ -102,7 +102,7 @@ $\vec {r}(t)$ is called trajectory.
 \subsubsection{Degrees of freedom}
 
 We call \textbf{degree of freedom} the number of independent coordinates needed to describe the position of a point.
-Generarly we need 3 degrees of freedom.
+Generally we need 3 degrees of freedom.
 
 \begin{examplebox}{Example}
   \begin{itemize}
