--- a/semester 2/probability.tex
+++ b/semester 2/probability.tex
@@ -45,9 +45,9 @@
 
 Probability has had many interpretations over the years, here's some of them:
 \begin{enumerate}
-    \item \textbf{Classical interpretation}: Games of chances, all the outcomes are equaly likely.
-          We can calculate probability as the number of favourable outcomes over the total.
-          This only works on finite spaces with perfect simmetries.
+    \item \textbf{Classical interpretation}: Games of chances, all the outcomes are equally likely.
+          We can calculate probability as the number of favorable outcomes over the total.
+          This only works on finite spaces with perfect symmetries.
     \item \textbf{Frequency interpretation}: This is the probability calculated in the long run by repeating the experiment infinitely many times.
           This only works if the experiment is repeatable. What if we cannot take the limit?
     \item \textbf{Subjective interpretation}: How much are people willing to bet on something to happen?
@@ -300,7 +300,7 @@ We can prove the following properties:
           $$
 \end{enumerate}
 
-These properties are easy to see by looking at an Euler-Venn diagram but not as trival to prove.
+These properties are easy to see by looking at an Euler-Venn diagram but not as trivial to prove.
 
 \begin{proof}
     We will prove the properties in order:
