--- a/semester 2/computer science 2.tex
+++ b/semester 2/computer science 2.tex
@@ -1,4 +1,4 @@
-\documentclass[14pt]{extarticle}
+\documentclass[10pt]{extarticle}
 \title{Probability Notes}
 \author{Giacomo Ellero}
 
@@ -66,7 +66,7 @@ These sequences describe the time it takes for an algorithm to solve a certain p
     As we can see just need to show that $C$ exists, we don't need to find the best one.
 \end{examplebox}
 
-Usually we don't use limits to prove that a sequence is big O of another, it is usually more convenient to procede by inequalities.
+Usually we don't use limits to prove that a sequence is big O of another, it is usually more convenient to proceed by inequalities.
 
 \begin{notebox}{Logarithms}
     When we have sequences with logarithms we don't need to specify the basis,
@@ -96,7 +96,7 @@ When we run an experiment we can define
     \item the probability of the outcome $p_i$
 \end{itemize}
 
-We can aslo define the expected result $E(X)$ of the experiment as
+We can also define the expected result $E(X)$ of the experiment as
 $$
     E(X) = \sum ^n _{i = 1} x_i p_i
 $$
@@ -122,7 +122,7 @@ We subdivide the 32 bits in 3 parts: 1 bit for the \textbf{sign}, 8 bits for the
     \end{bytefield}
 \end{center}
 
-The number is interpreded according to the following formula:
+The number is interpreted according to the following formula:
 
 $$
     n = (-1)^s \cdot 2^{e - 127} \cdot (1 + f)
